# sflkit-lib

./: README.md  pyproject.toml  setup.cfg
src/sflkitlib/: __init__.py  lib.py
src/sflkitlib/events/: __init__.py  codec.py  event.py
tests/: test_codec.py  test_events.py
