[build-system]
requires = [
    "setuptools>=59.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sflkitlib"
version = "0.0.4"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
]
description = "Lib for SFLKit: : A Workbench for Statistical Fault Localization"
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]

[project.urls]
"Homepage" = "https://github.com/smythi93/sflkit-lib/"
"Bug Tracker" = "https://github.com/smythi93/sflkit-lib/issues"

[tool.black]
line-length = 88
target-version = ['py36']
