[metadata]
name = SFLKit Lib
version = attr: sflkitlib.__version__
author = Marius Smytzek
author_email = marius.smytzek@cispa.de
description = Lib for SFLKit: : A Workbench for Statistical Fault Localization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smythi93/sflkitlib
project_urls =
    Bug Tracker = https://github.com/smythi93/sflkitlib/issues
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src

[options.extras_require]
test =
dev =